After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691557 - Getting all array elemements with wildcard fails
Getting all array elemements with wildcard fails
Status: RESOLVED FIXED
Product: json-glib
Classification: Core
Component: Core
git master
Other Linux
: Normal normal
: ---
Assigned To: json-glib-maint
json-glib-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-11 15:45 UTC by Juan A. Suarez Romero
Modified: 2013-01-11 18:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add test case and fixes the problem (2.03 KB, patch)
2013-01-11 15:46 UTC, Juan A. Suarez Romero
committed Details | Review

Description Juan A. Suarez Romero 2013-01-11 15:45:22 UTC
Using the same example as in the documentation, if I run JSON path with $['store']['book'][*] I should get an array with all the books (an array with 4 objects).

But rather, I'm getting an array composed of several arrays. The funny thing is each of these arrays is the solution.

I'm attaching a patch that adds this use case to path testcase, as well as it fixes the problem.
Comment 1 Juan A. Suarez Romero 2013-01-11 15:46:11 UTC
Created attachment 233241 [details] [review]
Add test case and fixes the problem
Comment 2 Emmanuele Bassi (:ebassi) 2013-01-11 17:49:06 UTC
thanks, pushed to master, along with a similar commit that fixed the same issue in the object code path.
Comment 3 Emmanuele Bassi (:ebassi) 2013-01-11 18:17:13 UTC
also pushed to the stable json-glin-0-14 branch.