path: Fix get all array elements with wildcard

Using the same data as in tests, asking for $['store']['book'][*] JSON path
should return all the book objects in an array.

But that array is returned inside another array, dupped several times.

https://bugzilla.gnome.org/show_bug.cgi?id=691557